Story #14769: OfferDiag feature